--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "deployUrl": "Portfolio/",
             "outputPath": "dist/front",
             "index": "src/index.html",
             "browser": "src/main.ts",
